--- a/Assets/Editor/Resources/TexturizerGraph.uss
+++ b/Assets/Editor/Resources/TexturizerGraph.uss
@@ -2,4 +2,7 @@ GridBackground {
 	--grid-background-color: #282828;
 	--line-color: rgba(193,196,192,0.1);
 	--thick-line-color: rgba(193,196,192,0.5);
+	margin-top: 20px;
+	
 }
+
