Recursive connection fix

--- a/Assets/Editor/Resources/TexturizerGraph.uss
+++ b/Assets/Editor/Resources/TexturizerGraph.uss
@@ -1,7 +1,8 @@
 GridBackground {
     --grid-background-color: rgb(40, 40, 40);
-    --line-color: rgba(193, 196, 192, 0.1);
-    --thick-line-color: rgba(193, 196, 192, 0.5);
+    --line-color: rgba(193, 196, 192, 0.04);
+    --thick-line-color: rgba(193, 196, 192, 0.3);
+	--spacing: 20;
     margin-top: 20px;
 }
 
